dev / 개발 환경과 운영환경 분리를 위한 리팩토링 - redis 만료시간 1일로 설정(00시에 레디스 데이터 삭제 됨) - 환경변수에 BASE_URL 추가